[package]
name = "wasm-globe"
version = "0.1.2"
authors = ["Chris Snape-Jenkinson"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features=["CanvasRenderingContext2d", "CssStyleDeclaration", "Document", "DomMatrix", "Element", "HtmlCanvasElement", "ImageData", "PointerEvent", "Window"] }

[build-dependencies]
shapefile = "0.3"
