[package]
name = "wasm-globe"
version = "0.1.3"
authors = ["Chris Snape-Jenkinson"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "DomMatrix",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "PointerEvent",
    "Window",
] }

[build-dependencies]
shapefile = "0.8"

[profile.release]
lto = true
# strip = true
strip = "debuginfo"
